# YHWH

hashmal-core/: .~lock.hashmal_fases.docx#  hashmal_fases.docx  hashmal_pasos_restantes.docx  sync.bat  sync.ps1  vault-sync.ps1
hashmal-core/hashmal-firmware/: CMakeLists.txt  ESTRUCTURA.md  HASHMAL-GUIA.md  partitions.csv  sdkconfig  sdkconfig.defaults
hashmal-core/hashmal-firmware/components/hashmal_auth/: CMakeLists.txt
hashmal-core/hashmal-firmware/components/hashmal_cache/: CMakeLists.txt
hashmal-core/hashmal-firmware/components/hashmal_cache/include/: hashmal_cache.h
hashmal-core/hashmal-firmware/components/hashmal_cache/src/: hashmal_cache_internal.h  mesa_api.c  mesa_cache.c  mesa_disponibilidad.c  mesa_leket.c  mesa_maaser.c  mesa_man.c  mesa_misgeret.c  mesa_moedim.c  mesa_shinnan.c
hashmal-core/hashmal-firmware/components/hashmal_comm/: CMakeLists.txt
hashmal-core/hashmal-firmware/components/hashmal_comm/include/: hashmal_comm.h
hashmal-core/hashmal-firmware/components/hashmal_comm/src/: hashmal_comm_internal.h  menora_aceite.c  menora_ble_paamon.c  menora_canales.c  menora_espnow_driver.c  menora_formato.c  menora_hub.c  menora_lora_driver.c  menora_mutsaqot.c  menora_parokhet.c  menora_routing.c  menora_tsofeh.c
hashmal-core/hashmal-firmware/components/hashmal_consensus/: CMakeLists.txt
hashmal-core/hashmal-firmware/components/hashmal_firewall/: CMakeLists.txt
hashmal-core/hashmal-firmware/components/hashmal_firewall/include/: hashmal_firewall.h
hashmal-core/hashmal-firmware/components/hashmal_firewall/src/: hashmal_firewall_internal.h  incienso_circuitbreaker.c  incienso_firewall.c  incienso_formato.c  incienso_heartbeat.c  incienso_penalizacion.c  incienso_pesaj.c  incienso_shemitah.c
hashmal-core/hashmal-firmware/components/hashmal_framework/: CMakeLists.txt
hashmal-core/hashmal-firmware/components/hashmal_healthcheck/: CMakeLists.txt
hashmal-core/hashmal-firmware/components/hashmal_healthcheck/include/: hashmal_healthcheck.h
hashmal-core/hashmal-firmware/components/hashmal_healthcheck/src/: hashmal_hc_internal.h  lavacro_ataques.c  lavacro_challenge.c  lavacro_core.c  lavacro_dos_niveles.c  lavacro_espejos.c  lavacro_joq_olam.c  lavacro_meshulash.c  lavacro_meshulash_sajar.c  lavacro_niveles.c  lavacro_parokhet.c  lavacro_tsur.c  lavacro_vectores.c
hashmal-core/hashmal-firmware/components/hashmal_intercession/: CMakeLists.txt
hashmal-core/hashmal-firmware/components/hashmal_intercession/include/: hashmal_intercession.h
hashmal-core/hashmal-firmware/components/hashmal_intercession/src/: altar_oro_ascendente.c  altar_oro_circuitbreaker.c  altar_oro_escudo.c  altar_oro_formula.c  altar_oro_oracion.c  hashmal_intercession_internal.h
hashmal-core/hashmal-firmware/components/hashmal_keygen/: CMakeLists.txt
hashmal-core/hashmal-firmware/components/hashmal_onboarding/: CMakeLists.txt
hashmal-core/hashmal-firmware/components/hashmal_perimeter/: CMakeLists.txt
hashmal-core/hashmal-firmware/components/hashmal_perimeter/include/: hashmal_perimeter.h
hashmal-core/hashmal-firmware/components/hashmal_perimeter/src/: atrio_columnas.c  atrio_dns_cautivo.c  atrio_http_portal.c  atrio_intencion.c  atrio_miqlat.c  atrio_orchim.c  atrio_perimetro.c  atrio_puente.c  atrio_puerta.c  atrio_shaar.c  atrio_wifi_ap.c  hashmal_perim_internal.h
hashmal-core/hashmal-firmware/components/hashmal_power/: CMakeLists.txt
hashmal-core/hashmal-firmware/components/hashmal_power/include/: hashmal_power.h
hashmal-core/hashmal-firmware/components/hashmal_power/src/: aceite_anan_esh.c  aceite_ashmurot.c  aceite_energia.c  aceite_mantenimiento.c  aceite_supervivencia.c  aceite_tamid.c  hashmal_power_internal.h
hashmal-core/hashmal-firmware/components/hashmal_roles/: CMakeLists.txt
hashmal-core/hashmal-firmware/components/hashmal_roles/include/: hashmal_roles.h
hashmal-core/hashmal-firmware/components/hashmal_roles/src/: hashmal_roles_internal.h  vestiduras_coordinador.c  vestiduras_efod.c  vestiduras_escalacion.c  vestiduras_goel.c  vestiduras_jatsotsrot.c  vestiduras_monitor.c  vestiduras_neder.c  vestiduras_nehemias.c  vestiduras_pectoral.c  vestiduras_roles.c  vestiduras_shutdown.c  vestiduras_tsofeh.c  vestiduras_tzitz.c  vestiduras_tzitzit.c
hashmal-core/hashmal-firmware/components/hashmal_storage/: CMakeLists.txt
hashmal-core/hashmal-firmware/devar_data/: index.json
hashmal-core/hashmal-firmware/main/: CMakeLists.txt  hashmal_epd.c  hashmal_epd.h  hashmal_main.c  hashmal_menu.c  hashmal_menu.h  hashmal_tdeck_pro.h  idf_component.yml
hashmal-core/hashmal-firmware/test/querubines/: querubines_framework.h
hashmal-core/tools/: generar_fingerprint_66.py  run_fingerprint.bat
hashmal-core/vault/: ESTADO — Dónde estamos (para continuar).md
hashmal-core/vault/CONSTRUCCION/: AUDITORÍA — Mil Ojos como Querubín (25 abril 2026).md  CODIGO — Orden de Construccion.md  CÓDIGO — Orden de Construcción.md  MUTSAQOT — Instrucciones Multi-Transporte.md  MUTSAQÓT — Instrucciones Multi-Transporte.md
hashmal-core/vault/CONSTRUCCION/ACEITE — Energia de YHWH/: ACEITE — PRUEBA FINAL 2 QUERUBINES.md  Energía — Verificada con la Palabra.md
hashmal-core/vault/CONSTRUCCION/ACEITE — Energía de YHWH/: ACEITE — ALGORITMO CIEGO.md
hashmal-core/vault/CONSTRUCCION/ALTAR — Autenticacion (reshet) de YHWH/: ALTAR — ALGORITMO CIEGO.md  (+2 more)
hashmal-core/vault/TAVNIT/: 00 — CIMIENTO.md  01 — EL ARCA (Arón).md  02 — EL KAPÓRET (Propiciatorio).md  03 — LA MESA DEL PAN (Shulján).md  04 — LA MENORÁ (Candelabro).md  05 — LA ESTRUCTURA (Cortinas, Tablas, Barras, Velo).md  06 — EL ALTAR DEL SACRIFICIO (Mizbéaj).md  07 — EL ATRIO (Jatsér).md  08 — EL ACEITE PERPETUO.md  09 — LAS VESTIDURAS SACERDOTALES.md  10 — LA CONSAGRACIÓN DE LOS SACERDOTES (Milluím).md  11 — EL ALTAR DEL INCIENSO (Mizbéaj haQetóret).md  12 — EL LAVACRO (Kiyór).md  13 — EL ACEITE DE LA UNCIÓN (Shémen haMishjá).md  14 — EL INCIENSO SAGRADO (Qetóret haSammím).md  15 — CONEXIONES — Cómo las piezas se tocan.md  16 — CUANDO EL MISHKÁN ESTÁ COMPLETO — Lo que sigue.md  ÍNDICE — Piezas del Mishkán.md
(+189 files in other folders)
